descrevando os commits na linha 13 em h3

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Olá mundo em Sass</h1>
     <h2>Agora sim começou o javascript</h2>
+    <h3>Beleza pura já estou fazerndo o commits deste projeto e ao mesmo tempo fazendo o push, para deixar meu projeto online</h3>
 </body>
 </html>
